
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <EditText
        android:id="@+id/isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/add_isbn"
        android:singleLine="true"
        android:inputType="number|phone"
        android:maxLines="1"
        android:maxLength="13"        
        android:hint="@string/input_title" >
    </EditText>

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_isbn"
        android:layout_alignBottom="@+id/add_isbn"
        android:layout_alignParentRight="true"
        android:text="@string/action_scan" />

    <Button
        android:id="@+id/add_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/isbn"
        android:layout_toLeftOf="@+id/scan"
        android:text="@string/action_add" />

</RelativeLayout>
